fix: Article information can now be retrieved from md files.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
@@ -32,6 +33,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "fs-extra": "^9.1.0",
+    "gray-matter": "^4.0.2",
+    "markdown-it": "^12.0.4",
     "postcss-import": "^14.0.0",
     "postcss-url": "^10.1.1",
     "prettier": "^2.2.1",
