--- a/backend/Makefile
+++ b/backend/Makefile
@@ -8,10 +8,10 @@ fmt:
 	gofmt -l -s -w .
 
 deploy:
-	gcloud app deploy
+	gcloud app deploy ./app.yaml
 
 dev: fmt
 	go build && ./HeartBeat
 
 db:
-	./cloud_sql_proxy -instances=noted-hangout-310606:asia-northeast1:default=tcp:3306
+	./cloud_sql_proxy -instances=noted-hangout-310606:asia-northeast1:heart-beat=tcp:3306
