--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "zenn-content-css": "^0.1.78",
+    "zenn-embed-elements": "^0.1.77",
+    "zenn-markdown-html": "^0.1.79"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.0.1",
